variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: value nBis
nBis=0
^RunFour:2: error: not found: value nBis
while (nBis !=4) {
       ^RunFour:5: error: not found: value nBis
      nBis = nBis +1
      ^